slave: only set up autologin conversations

Right now any time any session conversation is started,
we run its setup call if autologin is enabled. We should only do this
for autologin sessions, otherwise, we may repeat work done by
the greeter.

https://bugzilla.gnome.org/show_bug.cgi?id=682467